<resources>
    <string name="app_name">Memoria Next</string>

    <string name="versionName">2.0.00</string>

    <string name="submit_button">submit</string>

    <!-- menu-->
    <string name="action_settings">nothing here</string>

    <!-- toggles-->
    <string name="dateon">date</string>
    <string name="dateof">text</string>

    <string name="del">del</string>
    <string name="send">send</string>
    <!-- other -->
    <string name="copied">copied:</string>
    <string name="shareText">Choose your destiny:</string>
    <string name="ERROR">Some error</string>
    <string name="WTF">lolwut?</string>
    <string name="deletedMessage">DELETED</string>

    <!--ACTIONS ENUM utils.SettingsManager-->
    <string name="deleteAct">deletion</string>
    <string name="updateAct">edit</string>
    <string name="copyAct">copy</string>
    <string name="sendAct">share</string>
    <string name="off">disable</string>


</resources>
    <!--staticText-->